// JuQode — MVP 로컬 데이터베이스
//
// **지금 실제로 있는 것.** app/main/db/schema.sql 의 26개 표 + MIGRATIONS.
// 엔진은 로컬 임베디드 SQLite 다 (D-129). database_type 이 PostgreSQL 인 것은
// DDL 이 양쪽에서 도는 방언으로 쓰여 있기 때문이고, dbdiagram 이 엔진을 하나만
// 받기 때문이다.
//
// 로그인도 구독도 서버도 없다. 이 단계에서 확인하는 것은 하나다 —
// Claude Code 가 이 도구와 실제로 연동되는가.
//
// 표기: note 'MVP/미사용' = 컬럼은 있으나 아무도 값을 넣지 않는다.
//      note 'V1'        = V1 부터 생긴다. 지금 스키마에는 없다.
//      Note (표 단위)    = DBML 로 표현할 수 없는 것만 — CHECK · 부분 인덱스 · 알려진 구멍.

Project JuQode_MVP_Local {
  database_type: 'PostgreSQL'
}

Table work_status {
  code text [pk]
}

Table work_outcome {
  code text [pk]
}

Table step_state {
  code text [pk]
}

Table confidence {
  code text [pk]
}

Table signal_kind {
  code text [pk]
}

Table block_kind {
  code text [pk]
}

Table qc_status {
  code text [pk]
}

Table evidence_kind {
  code text [pk]
}

Table quick_command_rule {
  code text [pk]
}

Table schema_version {
  version integer [pk]
  applied_at timestamptz [not null]
}

Table project {
  id uuid [pk]
  path text [not null]
  name text [not null]
  first_opened_at timestamptz [not null]
  last_opened_at timestamptz [not null]
  owner_id uuid [note: 'V1']

  indexes {
    path [unique]
  }

  Note: 'V1 에서 path 단독 unique 가 (owner_id, path) 로 **교체된다** — 둘이 동시에 존재하지 않으므로 지금 있는 것만 그린다. SQLite 는 unique 제약을 떼려면 표를 다시 써야 한다. owner_id 는 서버 profile.id 를 가리키는 논리적 참조이고 외래키가 아니다 — 서버는 클라이언트가 보낸 이 값을 읽지 않는다.'
}

Table interpretation {
  id uuid [pk]
  project_id uuid [not null]
  status text [not null]
  source_hash text
  is_current boolean [not null, default: true]
  skipped_note text
  engine text [note: 'V1']
  engine_model text [note: 'V1']
  created_at timestamptz [not null]
  ended_at timestamptz

  Note: 'CHECK: status in (「interpreting」,「interpreted」,「partial」,「failed」). 부분 UNIQUE: (project_id) WHERE is_current — 프로젝트당 현재 해석 한 건, 인덱스 이름 interpretation_one_current. DBML 에 부분 인덱스 문법이 없어 여기에 적는다.'
}

Table interpretation_answer {
  interpretation_id uuid [not null]
  q smallint [not null]
  "text" text
  confidence text [not null]
  source_ref text

  indexes {
    (interpretation_id, q) [pk]
  }

  Note: 'CHECK: q between 1 and 6 (여섯 질문) · confidence <> 「confirmed」 or source_ref is not null — D-114: 확인됨 주장은 근거를 지목한다. 이 CHECK 가 그 규칙의 유일한 강제 지점이다.'
}

Table interpretation_read_file {
  interpretation_id uuid [not null]
  path text [not null]

  indexes {
    (interpretation_id, path) [pk]
  }
}

Table work {
  id uuid [pk]
  project_id uuid [not null]
  intent text [not null]
  status text [not null]
  outcome text
  requested_at timestamptz [not null]
  started_at timestamptz [not null]
  ended_at timestamptz
  runner_session_id uuid [note: '제안']
  runner_pid integer [note: '제안']
  runner_started_at timestamptz [note: '제안']
  stream_ref text [note: 'MVP/미사용']
  signals_truncated boolean [not null, default: false]

  indexes {
    (project_id, ended_at) [name: 'work_project_recent']
  }

  Note: 'CHECK: (status = 「ended」) = (outcome is not null) · (status = 「ended」) = (ended_at is not null) — D-124 · V2 M-14. 부분 UNIQUE: (project_id) WHERE status <> 「ended」 — 프로젝트당 진행 중 작업 한 건 (D-117), 인덱스 이름 work_one_active_per_project. runner_* 는 제안이다: 지금 PID 는 work_signal 의 payload JSON 안에 있다. PID 는 재사용되므로 단독으로 믿지 않는다 — 프로세스 시작 시각이 work.started_at 보다 앞설 때만 살아 있는 것으로 본다.'
}

Table step {
  id uuid [pk]
  work_id uuid [not null]
  ord smallint [not null]
  title text [not null]
  state text [not null]
  declared_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (work_id, ord) [unique]
  }
}

Table work_signal {
  id uuid [pk]
  work_id uuid [not null]
  seq bigint [not null]
  source text [not null]
  kind text [not null]
  payload text
  observed_at timestamptz [not null]

  indexes {
    (work_id, seq) [unique]
    (work_id, observed_at) [name: 'work_signal_latest']
  }

  Note: 'CHECK: source in (「claude」,「juqode」,「user」).'
}

Table evidence_basis {
  id uuid [pk]
  work_id uuid [not null]
  phase text [not null]
  kind text [not null]
  ref text [not null]
  excluded text
  created_at timestamptz [not null]

  indexes {
    (work_id, phase) [unique]
  }

  Note: 'CHECK: phase in (「before」,「after」). ref 는 kind 에 따라 다르다 — git_tree 면 Git 트리 오브젝트 ID(내용이 곧 해시라 Git 이 무결성을 스스로 관리한다), hash_manifest 면 매니페스트 해시다. 후자는 그 보장이 없다.'
}

Table work_result {
  work_id uuid [pk]
  summary text [not null]
  what_failed text
  created_at timestamptz [not null]
}

Table result_claim {
  id uuid [pk]
  work_id uuid [not null]
  ord smallint [not null]
  "text" text [not null]
  confidence text [not null]

  indexes {
    (work_id, ord) [unique]
  }
}

Table result_item {
  id uuid [pk]
  work_id uuid [not null]
  kind text [not null]
  ord smallint [not null]
  "text" text [not null]

  indexes {
    (work_id, kind, ord) [unique]
  }

  Note: 'CHECK: kind in (「done」,「not_done」) — 부분 결과의 된 것 / 안 된 것.'
}

Table raw_diff {
  id uuid [pk]
  work_id uuid [not null]
  file text [not null]
  displayable boolean [not null]
  unified_head text
  unified_ref text
  before_hash text [note: 'MVP/미사용']
  after_hash text [note: 'MVP/미사용']

  indexes {
    (work_id, file) [unique]
  }

  Note: 'unified_ref 는 보통 null 이다 — 상한(256 KB)을 넘은 diff 에만 값이 생기고, 그때 증거 저장소의 실제 파일(diffs/<sha256>.patch) 이거나 문자열 truncated(=blob 을 쓰지 못함) 다. 이름이 내용의 해시이므로 두 행이 같은 blob 을 가리킬 수 있다 — 행을 지울 때 다른 행이 아직 가리키는지 확인한다.'
}

Table change_group {
  id uuid [pk]
  work_id uuid [not null]
  ord smallint [not null]
  title text [not null]
  what text
  why text
  affects text
  confidence text
  explainable boolean [not null, default: true]
  source_ref text

  indexes {
    (work_id, ord) [unique]
  }
}

Table change_group_file {
  change_group_id uuid [not null]
  raw_diff_id uuid [not null]

  indexes {
    (change_group_id, raw_diff_id) [pk]
  }

  Note: '알려진 구멍: 두 참조가 같은 work_id 에 속하는지 DB 가 확인하지 않는다. 작업 A 의 그룹에 작업 B 의 diff 를 이을 수 있다. 지금 코드 경로로는 발생하지 않고 저장 계층 테스트가 그것을 고정한다. 정식 해법은 (id, work_id) UNIQUE + 복합 외래키이고, schema.sql 이 Canon 축자 사본이라 Canon 판정 대상이다.'
}

Table code_block {
  id uuid [pk]
  change_group_id uuid [not null]
  raw_diff_id uuid [not null]
  ord smallint [not null]
  kind text [not null]
  name text
  explanation text
  hunk_ord smallint
  line_start integer
  line_end integer

  indexes {
    (change_group_id, ord) [unique]
  }

  Note: 'CHECK: line_end is null or line_start is null or line_end >= line_start. 알려진 구멍: change_group_file 과 같다 — 그룹과 diff 를 각각 참조하고, 둘이 같은 work_id 인지 DB 가 보지 않는다.'
}

Table quick_command_run {
  id uuid [pk]
  project_id uuid [not null]
  phrase text [not null]
  rule_id text [not null]
  command text [not null]
  status text [not null]
  output_head text
  output_ref text [note: 'MVP/미사용']
  exit_code integer
  runner_session_id uuid [note: '제안']
  runner_pid integer [note: '제안']
  runner_started_at timestamptz [note: '제안']
  started_at timestamptz
  ended_at timestamptz
  stopped_at timestamptz
  created_at timestamptz [not null]

  indexes {
    (project_id, created_at) [name: 'qc_project_recent']
  }

  Note: '알려진 구멍: 프로세스 표식이 **하나도 없다.** 그래서 재시작 뒤 이전 실행의 run 을 물어볼 수조차 없고, 실제로 돌고 있는 개발 서버도 확인 불가로 닫힌다. runner_* 세 컬럼이 그 해법이고, 아직 제안이다.'
}


// ── 관계 ──
Ref: interpretation.project_id > project.id [delete: restrict]
Ref: work.project_id > project.id [delete: restrict]
Ref: quick_command_run.project_id > project.id [delete: restrict]
Ref: interpretation_answer.interpretation_id > interpretation.id [delete: cascade]
Ref: interpretation_read_file.interpretation_id > interpretation.id [delete: cascade]
Ref: interpretation_answer.confidence > confidence.code
Ref: work.status > work_status.code
Ref: step.work_id > work.id [delete: cascade]
Ref: step.state > step_state.code
Ref: work_signal.work_id > work.id [delete: cascade]
Ref: work_signal.kind > signal_kind.code
Ref: evidence_basis.work_id > work.id [delete: cascade]
Ref: evidence_basis.kind > evidence_kind.code
Ref: work_result.work_id - work.id [delete: cascade]
Ref: result_claim.work_id > work_result.work_id [delete: cascade]
Ref: result_claim.confidence > confidence.code
Ref: result_item.work_id > work_result.work_id [delete: cascade]
Ref: raw_diff.work_id > work.id [delete: cascade]
Ref: change_group.work_id > work.id [delete: cascade]
Ref: change_group_file.change_group_id > change_group.id [delete: cascade]
Ref: change_group_file.raw_diff_id > raw_diff.id [delete: cascade]
Ref: code_block.change_group_id > change_group.id [delete: cascade]
Ref: code_block.raw_diff_id > raw_diff.id [delete: restrict]
Ref: code_block.kind > block_kind.code
Ref: quick_command_run.rule_id > quick_command_rule.code
Ref: quick_command_run.status > qc_status.code

TableGroup "MVP · 룩업" {
  work_status
  work_outcome
  step_state
  confidence
  signal_kind
  block_kind
  qc_status
  evidence_kind
  quick_command_rule
  schema_version
}
TableGroup "MVP · 프로젝트와 해석" {
  project
  interpretation
  interpretation_answer
  interpretation_read_file
}
TableGroup "MVP · Work 와 증거" {
  work
  step
  work_signal
  evidence_basis
  work_result
  result_claim
  result_item
}
TableGroup "MVP · 변경" {
  raw_diff
  change_group
  change_group_file
  code_block
}
TableGroup "MVP · Quick Command" {
  quick_command_run
}
